--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 </head>
 
 <body class="bg-white">
+	<style>
+	body {
+  overflow-x: hidden;
+}
+	</style>
     <!-- Topbar Start -->
     <div class="container-fluid">
         <div class="row bg-secondary py-2 px-lg-5">
