--- a/index.html
+++ b/index.html
@@ -47,25 +47,26 @@
         </div>
         <div class="row py-3 px-lg-5">
             <div class="col-lg-4">
-                <a href="" class="navbar-brand d-none d-lg-block">
+                <a href="" class="navbar-brand d-none d-block">
                     <h1 class="m-0 display-5 text-capitalize font-italic"><span class="text-primary">Apex </span>Security Solutions</h1>
                 </a>
             </div>
-          <div class="d-flex flex-column flex-sm-row align-items-center justify-content-center text-center gap-3">
-    <div class="px-3">
-        <h6>Our Office</h6>
-        <p class="m-0">Thaddatheru Junction, Jaffna</p>
-    </div>
-    <div class="px-3">
-        <h6>Email Us</h6>
-        <p class="m-0">info@WEBbuilders.lk</p>
-    </div>
-    <div class="px-3">
-        <h6>Call Us</h6>
-        <p class="m-0">+94 769988123</p>
-    </div>
-</div>
-
+          <div class="col-lg-8 text-center text-lg-right">
+                <div class="d-inline-flex align-items-center">
+                    <div class="d-inline-flex flex-column text-center pr-3 border-right">
+                        <h6>Our Office</h6>
+                        <p class="m-0">Thaddatheru Junction,Jaffna</p>
+                    </div>
+                    <div class="d-inline-flex flex-column text-center px-3 border-right">
+                        <h6>Email Us</h6>
+                        <p class="m-0">info@WEBbuilders.lk</p>
+                    </div>
+                    <div class="d-inline-flex flex-column text-center pl-3">
+                        <h6>Call Us</h6>
+                        <p class="m-0">+94 769988123</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Topbar End -->
