--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="row py-3 px-lg-5">
             <div class="col-lg-4">
-                <a href="" class="navbar-brand d-none d-lg-block">
+                <a href="" class="navbar-brand d-none d-lg-flex">
                     <h1 class="m-0 display-5 text-capitalize font-italic"><span class="text-primary">Apex </span>Security Solutions</h1>
                 </a>
             </div>
