--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         </div>
         <div class="row py-3 px-lg-5">
             <div class="col-lg-4">
-                <a href="" class="navbar-brand d-none d-lg-flex">
+                <a href="" class="navbar-brand d-none d-lg-block">
                     <h1 class="m-0 display-5 text-capitalize font-italic"><span class="text-primary">Apex </span>Security Solutions</h1>
                 </a>
             </div>
-          <div class="col-lg-8 text-center text-lg-right d-none d-lg-block">
+          <div class="col-lg-8 text-center text-lg-right d-none d-lg-flex">
                 <div class="d-inline-flex align-items-center">
                     <div class="d-inline-flex flex-column text-center pr-3 border-right">
                         <h6>Our Office</h6>
